argocd-setup/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: 9.30.123.216.nip.io
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port: 
              number: 443
        pathType: Prefix
        path: /
